fix: scrollbar flicker

--- a/app/containers/appContainer/scrollbar.scss
+++ b/app/containers/appContainer/scrollbar.scss
@@ -1,14 +1,15 @@
 *:not(:hover)::-webkit-scrollbar {
-  display: none;
+    display: none;
 }
-  
+
 ::-webkit-scrollbar {
-  width: 8px;
-  height: 5px;
+    width: 8px;
+    height: 5px;
+    overflow: auto;
 }
 
 ::-webkit-scrollbar-thumb {
-  border-radius: 2px;
-  background: #f5f5f5;
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+    border-radius: 2px;
+    background: #f5f5f5;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
 }
